# pulse-terminal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  ROADMAP.md  SECURITY.md  SESSIONS.md  STATUS.md  SYNC.md  ecosystem.config.cjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/alerts/: README.md  package.json  tsconfig.json
apps/alerts/src/: dual-assets-rollup.ts  dual-assets-tick.ts  index.ts  notifier.ts  snapshot-cron.ts  storage.ts
apps/mcp/: README.md  manifest.json  pack-dxt.mjs  package.json
apps/mcp/src/: _helpers.ts  index.ts
apps/realtime/: README.md  package.json  tsconfig.json
apps/realtime/src/: apr-reader.test.ts  apr-reader.ts  binance-depth-stream.ts  binance-stream.ts  bybit-stream.ts  cache.ts  channels.ts  contracts.ts  http-server.regime.test.ts  http-server.ts  hub-health.test.ts  hub-health.ts  index.ts  okx-stream.ts  poller.ts  server.ts  snapshot-poller.ts  tracked-symbols.ts
apps/web/: README.md  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  (+2 more)
design-refs/: bloomberg-palette.md
design_handoff_cryptopulse/: CryptoPulse Terminal.html  README.md  cryptopulse.jsx
docs/: ADR-001-mcp-first.md  ADR-002-hybrid-streams.md  ADR-003-jsonl-alerts.md  ADR-004-sqlite-bybit-apr.md  DUAL-ASSETS.md  ETF-FLOWS.md  HUB-HEALTH-V2.md  QUICKSTART.md  SESSION-PROMPTS.md
scripts/: ask.mjs  dual-assets-tick.mjs  grade-replay.mjs  probe-mcp.mjs  pulse-status.mjs
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+124 files in other folders)
