[package]
name = "pulse-terminal"
version = "1.0.0"
description = "Pulse Terminal — Crypto Macro Intelligence Terminal"
authors = ["Firsty"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pulse_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
